src/test/ui/span/borrowck-fn-in-const-b.nll.stderr
error[E0596]: cannot borrow immutable item `*x` as mutable
  --> $DIR/borrowck-fn-in-const-b.rs:17:9
   |
LL |     fn broken(x: &Vec<String>) {
   |                  ------------ help: consider changing this to be a mutable reference: `&mut std::vec::Vec<std::string::String>`
LL |         x.push(format!("this is broken"));
   |         ^ `x` is a `&` reference, so the data it refers to cannot be borrowed as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
